fix: correct header navigation alignment

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ header {
 }
 
 nav {
+    width: fit-content;
 }
 
 nav ul {
